--- a/main.css
+++ b/main.css
@@ -6,3 +6,15 @@ body{
     height: 200px;
     width: 200px;
 }
+
+.section-1{
+    height: 800px;
+}
+
+.section-2{
+    height: 800px;
+}
+
+.section-3{
+    height: 800px;
+}
