--- a/main.css
+++ b/main.css
@@ -18,3 +18,18 @@ body{
 .section-3{
     height: 800px;
 }
+
+.image-1{
+    height: 800px;
+    width: 800px;
+}
+
+.image-2{
+    height: 800px;
+    width: 800px;
+}
+
+.image-3{
+    height: 800px;
+    width: 800px;
+}
