--- a/main.css
+++ b/main.css
@@ -1,15 +1,16 @@
 body{
-    background-color: FFDCB9;
+    background-color: #FFDCB9;
 }
 
 .logo{
-    height: 250px;
-    width: 250px;
+    height: 100px;
+    width: 100px;
 }
+
 
 #navbar{
     overflow: hidden;
-    background-color: #4C4C4C;
+    background-color: #B09A85;
     padding: 30px;
 
 }
@@ -24,6 +25,24 @@ body{
 #navbar a:hover{
     background-color: #6A6A6A;
     color: #FFDCB9;
+}
+
+.main-content{
+    padding: 15px;
+}
+
+.sticky{
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+.sticky + .main-content{
+    padding-top: 60px;
+}
+
+body{
+    margin: 0;
 }
 
 .section-1{
@@ -50,26 +69,27 @@ body{
 .image-1{
     
     width: 800px;
-    padding: 10px;
-    margin: 10px;
+    padding: 5px;
+    margin: 5px;
 }
 
 .image-2{
     
     width: 800px;
-    padding: 10px;
-    margin: 10px;
+    padding: 5px;
+    margin: 5px;
 }
 
 .image-3{
     
     width: 800px;
-    padding: 10px;
-    margin: 10px;
+    padding: 5px;
+    margin: 5px;
 }
 
 .text-1{
     display: flex;
-    text-align: center;
-    margin-right: 40%;
+    text-align: left;
+    margin-right: 25%;
+    margin-top: 20%
 }
