--- a/main.css
+++ b/main.css
@@ -2,24 +2,30 @@ body{
     background-color: #FFDCB9;
 }
 
+.header{
+    background-image: url("image/header.jpg");
+}
+
 .logo{
-    height: 100px;
-    width: 100px;
+    height: 250px;
+    width: 250px;
+    margin: 0 auto;
 }
 
 
 #navbar{
     overflow: hidden;
-    background-color: #B09A85;
+    background-color: #4C4C4C;
     padding: 30px;
+    text-align: center;
 
 }
 
 #navbar a{
     color: white;
     text-align: center;
-    padding: 40px 40px;
-    font-size: 18px;
+    padding: 80px 80px;
+    font-size: 24px;
 }
 
 #navbar a:hover{
@@ -28,7 +34,7 @@ body{
 }
 
 .main-content{
-    padding: 15px;
+    padding: 0px;
 }
 
 .sticky{
@@ -43,6 +49,19 @@ body{
 
 body{
     margin: 0;
+}
+
+.round-normal{
+    width: 150px;
+    height: 50px;
+}
+
+.creative-div-1{
+    display: flex;
+    flex-direction: column;
+    margin-right: 350px;
+    margin-top: 350px;
+
 }
 
 .section-1{
@@ -68,28 +87,26 @@ body{
 
 .image-1{
     
-    width: 800px;
-    padding: 5px;
-    margin: 5px;
+    width: 900px;
+    /* padding: 5px;
+    margin: 5px; */
 }
 
 .image-2{
     
     width: 800px;
-    padding: 5px;
-    margin: 5px;
+    /* padding: 5px;
+    margin: 5px; */
 }
 
 .image-3{
     
     width: 800px;
-    padding: 5px;
-    margin: 5px;
+    /* padding: 5px;
+    margin: 5px; */
 }
 
 .text-1{
     display: flex;
     text-align: left;
-    margin-right: 25%;
-    margin-top: 20%
 }
