--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@ body{
 
 .header{
     background-image: url("image/header.jpg");
+    background-size: cover;
 }
 
 .logo{
@@ -51,9 +52,13 @@ body{
     margin: 0;
 }
 
+/* this is the button */
 .round-normal{
     width: 150px;
     height: 50px;
+    font-size: 16px;
+    background-color: #1F1F1F;
+    color: white;
 }
 
 .creative-div-1{
@@ -94,14 +99,14 @@ body{
 
 .image-2{
     
-    width: 800px;
+    width: 940px;
     /* padding: 5px;
     margin: 5px; */
 }
 
 .image-3{
     
-    width: 800px;
+    width: 900px;
     /* padding: 5px;
     margin: 5px; */
 }
@@ -109,4 +114,18 @@ body{
 .text-1{
     display: flex;
     text-align: left;
+}
+
+.coming-soon{
+    margin-left: 200px;
+    margin-top: 300px;
+    font-size: 20px;
+    line-height: 2.5;
+}
+
+.about-us{
+    margin-right: 50px;
+    margin-top: 300px;
+    font-size: 20px;
+    line-height: 2.5;
 }
