--- a/main.css
+++ b/main.css
@@ -1,7 +1,3 @@
-body{
-    background-color: #FFDCB9;
-}
-
 .header{
     background-image: url("image/header.jpg");
     background-size: cover;
@@ -13,12 +9,12 @@ body{
     margin: 0 auto;
 }
 
-
 #navbar{
     overflow: hidden;
     background-color: #4C4C4C;
     padding: 30px;
     text-align: center;
+    z-index: 999;
 
 }
 
@@ -93,22 +89,16 @@ body{
 .image-1{
     
     width: 900px;
-    /* padding: 5px;
-    margin: 5px; */
 }
 
 .image-2{
     
     width: 940px;
-    /* padding: 5px;
-    margin: 5px; */
 }
 
 .image-3{
     
     width: 900px;
-    /* padding: 5px;
-    margin: 5px; */
 }
 
 .text-1{
@@ -153,4 +143,37 @@ body{
 
 .fa.fa-pinterest-square{
     font-size: 36px;
+}
+
+
+/* animation */
+section.fadeIn {
+    animation: fadeIn 1s forwards;
+}
+
+/* keyframes */
+@keyframes fadeIn {
+
+    0%{
+        opacity: 0.5;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
+section:nth-child(1){
+    opacity: 1;
+    background-color: #FFDCB9;;
+}
+
+section:nth-child(2){
+    opacity: 0.20;
+    background-color: #FFDCB9;;
+}
+
+section:nth-child(3){
+    opacity: 0.20;
+    background-color: #FFDCB9;;
 }
